Automatically backed up by Learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,8 @@
 
-<form class="" action="/index" method="post">
+<form class="" action="/checkout" method="post">
+  <h3><label for="item">Item: </label>
+  <input type="text" id="item" name="item"></input></h3>
+
+
 
 </form>
