--- a/views/index.erb
+++ b/views/index.erb
@@ -2,7 +2,5 @@
 <form class="" action="/checkout" method="post">
   <h3><label for="item">Item: </label>
   <input type="text" id="item" name="item"></input></h3>
-
-
-
+  <input type="submit" value="submit">
 </form>
